--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lpf.tools">
 
+
+    <!--Theme.DayNight模式可以改变应用白天和晚上状态的主题-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.DayNight">
         <activity android:name=".ui.activity.CollpasedTopActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".base.BaseActivity" />
-        <!--<activity android:name=".ui.activity.CollpasedTopActivity"></activity>-->
+        <!-- <activity android:name=".ui.activity.CollpasedTopActivity"></activity> -->
+        <activity android:name=".ui.activity.ItemDetailActivity"></activity>
     </application>
 
 </manifest>
