--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.DayNight">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".CustomViewActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +21,8 @@
         <activity android:name=".base.BaseActivity" />
         <!-- <activity android:name=".ui.activity.CollpasedTopActivity"></activity> -->
         <activity android:name=".ui.activity.ItemDetailActivity" />
-        <activity android:name=".ui.activity.CardFlipActivity"></activity>
+        <!-- <activity android:name=".ui.activity.CardFlipActivity"></activity> -->
+        <!--<activity android:name=".CustomViewActivity"></activity>-->
     </application>
 
 </manifest>
