--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lpf.tools">
 
+    <!--音频播放-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
+
     <!-- Theme.DayNight模式可以改变应用白天和晚上状态的主题 -->
     <application
         android:allowBackup="true"
@@ -10,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DayNight">
         <activity
-            android:name=".CustomViewActivity"
+            android:name=".views.sampleactivity.VolumeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +27,7 @@
         <!-- <activity android:name=".ui.activity.CardFlipActivity"></activity> -->
         <!-- <activity android:name=".CustomViewActivity"></activity> -->
         <!--<activity android:name=".TestDBActivity"></activity>-->
+        <!--<activity android:name=".views.sampleactivity.VolumeActivity"></activity>-->
     </application>
 
 </manifest>
